@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2012/03/17 14:29:27 taca Exp $
+# $NetBSD: Makefile,v 1.16 2012/04/28 14:06:51 taca Exp $
 
-DISTNAME=	sequel-3.34.1
+DISTNAME=	sequel-3.35.0
 CATEGORIES=	databases
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
