@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.13 2012/03/17 14:29:27 taca Exp $
+@comment $NetBSD: PLIST,v 1.14 2012/04/28 14:06:51 taca Exp $
 bin/sequel
 ${GEM_HOME}/cache/${GEM_NAME}.gem
 ${GEM_LIBDIR}/CHANGELOG
@@ -66,6 +66,7 @@ ${GEM_LIBDIR}/doc/release_notes/3.31.0.txt
 ${GEM_LIBDIR}/doc/release_notes/3.32.0.txt
 ${GEM_LIBDIR}/doc/release_notes/3.33.0.txt
 ${GEM_LIBDIR}/doc/release_notes/3.34.0.txt
+${GEM_LIBDIR}/doc/release_notes/3.35.0.txt
 ${GEM_LIBDIR}/doc/release_notes/3.4.0.txt
 ${GEM_LIBDIR}/doc/release_notes/3.5.0.txt
 ${GEM_LIBDIR}/doc/release_notes/3.6.0.txt
@@ -76,6 +77,7 @@ ${GEM_LIBDIR}/doc/schema_modification.rdoc
 ${GEM_LIBDIR}/doc/sharding.rdoc
 ${GEM_LIBDIR}/doc/sql.rdoc
 ${GEM_LIBDIR}/doc/testing.rdoc
+${GEM_LIBDIR}/doc/thread_safety.rdoc
 ${GEM_LIBDIR}/doc/transactions.rdoc
 ${GEM_LIBDIR}/doc/validations.rdoc
 ${GEM_LIBDIR}/doc/virtual_rows.rdoc
@@ -112,7 +114,6 @@ ${GEM_LIBDIR}/lib/sequel/adapters/mock.rb
 ${GEM_LIBDIR}/lib/sequel/adapters/mysql.rb
 ${GEM_LIBDIR}/lib/sequel/adapters/mysql2.rb
 ${GEM_LIBDIR}/lib/sequel/adapters/odbc.rb
-${GEM_LIBDIR}/lib/sequel/adapters/odbc/db2.rb
 ${GEM_LIBDIR}/lib/sequel/adapters/odbc/mssql.rb
 ${GEM_LIBDIR}/lib/sequel/adapters/openbase.rb
 ${GEM_LIBDIR}/lib/sequel/adapters/oracle.rb
@@ -211,6 +212,7 @@ ${GEM_LIBDIR}/lib/sequel/plugins/class_table_inheritance.rb
 ${GEM_LIBDIR}/lib/sequel/plugins/composition.rb
 ${GEM_LIBDIR}/lib/sequel/plugins/dataset_associations.rb
 ${GEM_LIBDIR}/lib/sequel/plugins/defaults_setter.rb
+${GEM_LIBDIR}/lib/sequel/plugins/dirty.rb
 ${GEM_LIBDIR}/lib/sequel/plugins/force_encoding.rb
 ${GEM_LIBDIR}/lib/sequel/plugins/hook_class_methods.rb
 ${GEM_LIBDIR}/lib/sequel/plugins/identity_map.rb
@@ -285,6 +287,7 @@ ${GEM_LIBDIR}/spec/extensions/composition_spec.rb
 ${GEM_LIBDIR}/spec/extensions/core_extensions_spec.rb
 ${GEM_LIBDIR}/spec/extensions/dataset_associations_spec.rb
 ${GEM_LIBDIR}/spec/extensions/defaults_setter_spec.rb
+${GEM_LIBDIR}/spec/extensions/dirty_spec.rb
 ${GEM_LIBDIR}/spec/extensions/force_encoding_spec.rb
 ${GEM_LIBDIR}/spec/extensions/hook_class_methods_spec.rb
 ${GEM_LIBDIR}/spec/extensions/identity_map_spec.rb
@@ -381,10 +384,10 @@ ${GEM_LIBDIR}/spec/files/reversible_migrations/005_reversible.rb
 ${GEM_LIBDIR}/spec/files/timestamped_migrations/1273253849_create_sessions.rb
 ${GEM_LIBDIR}/spec/files/timestamped_migrations/1273253851_create_nodes.rb
 ${GEM_LIBDIR}/spec/files/timestamped_migrations/1273253853_3_create_users.rb
-${GEM_LIBDIR}/spec/files/transaction_migrations/001_create_alt_basic.rb
-${GEM_LIBDIR}/spec/files/transaction_migrations/002_create_basic.rb
-${GEM_LIBDIR}/spec/files/transactionless_migrations/001_create_alt_basic.rb
-${GEM_LIBDIR}/spec/files/transactionless_migrations/002_create_basic.rb
+${GEM_LIBDIR}/spec/files/transaction_specified_migrations/001_create_alt_basic.rb
+${GEM_LIBDIR}/spec/files/transaction_specified_migrations/002_create_basic.rb
+${GEM_LIBDIR}/spec/files/transaction_unspecified_migrations/001_create_alt_basic.rb
+${GEM_LIBDIR}/spec/files/transaction_unspecified_migrations/002_create_basic.rb
 ${GEM_LIBDIR}/spec/files/uppercase_timestamped_migrations/1273253849_CREATE_SESSIONS.RB
 ${GEM_LIBDIR}/spec/files/uppercase_timestamped_migrations/1273253851_CREATE_NODES.RB
 ${GEM_LIBDIR}/spec/files/uppercase_timestamped_migrations/1273253853_3_CREATE_USERS.RB
