@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.13 2012/03/17 14:29:27 taca Exp $
+$NetBSD: distinfo,v 1.14 2012/04/28 14:06:51 taca Exp $
 
-SHA1 (sequel-3.34.1.gem) = ed654fddcd91eaf0147adb28d84c85f3b6ed6a17
-RMD160 (sequel-3.34.1.gem) = 96b3f702b6eddb80ce84c1bc44a00e45c415d914
-Size (sequel-3.34.1.gem) = 922112 bytes
+SHA1 (sequel-3.35.0.gem) = 1d633175c0c66fdb991fa58997d92d3c9ea0dd04
+RMD160 (sequel-3.35.0.gem) = a8ff7dd4aab74c4496d73b91401805e6e69333a4
+Size (sequel-3.35.0.gem) = 929280 bytes
