@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.10 2011/08/25 15:21:47 taca Exp $
+$NetBSD: distinfo,v 1.11 2012/03/18 09:20:18 taca Exp $
 
-SHA1 (ZenTest-4.7.0.gem) = fe4377090256d058160a6d1c117e969c3db7b05a
-RMD160 (ZenTest-4.7.0.gem) = 72b723ae623341c0ede833e96dd33b9ebabc59a2
-Size (ZenTest-4.7.0.gem) = 68096 bytes
+SHA1 (ZenTest-4.8.0.gem) = 1525f9261d8cf314971fe1775bd1c6dbdde3eb12
+RMD160 (ZenTest-4.8.0.gem) = 26d570e2a7588838fb334e53ad62b3cbefbfafac
+Size (ZenTest-4.8.0.gem) = 68608 bytes
