@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.19 2012/03/21 15:41:17 taca Exp $
+$NetBSD: distinfo,v 1.20 2012/04/28 14:12:04 taca Exp $
 
-SHA1 (hoe-3.0.3.gem) = 26385009017108997131237bd370baba28e808ab
-RMD160 (hoe-3.0.3.gem) = b933d7ff2231e6417385ba11c49db02a24ae69fb
-Size (hoe-3.0.3.gem) = 125952 bytes
+SHA1 (hoe-3.0.6.gem) = 2491158b66dad9d9c345807b397c9aa82490776f
+RMD160 (hoe-3.0.6.gem) = f53e2d9a6e48a36f2871705880ac977d736a487b
+Size (hoe-3.0.6.gem) = 126464 bytes
