@@ -1,4 +1,5 @@
-@comment $NetBSD: PLIST,v 1.5 2008/04/12 22:43:00 jlam Exp $
+@comment $NetBSD: PLIST,v 1.6 2012/05/29 21:19:30 cheusov Exp $
 bin/gpatch
 gnu/bin/patch
+gnu/man/man1/patch.1
 man/man1/gpatch.1
