@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2012/03/20 07:24:21 taca Exp $
 
 DISTNAME=	io-like-0.3.0
 CATEGORIES=	devel
@@ -6,7 +6,6 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://io-like.rubyforge.org
 COMMENT=	Functionality of an IO object to any class
-LICENSE=	#
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
