@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.14 2011/06/16 09:24:05 adam Exp $
+# $NetBSD: Makefile,v 1.15 2012/01/08 18:37:33 gdt Exp $
 
-DISTNAME=	geos-3.3.2
+DISTNAME=	geos-3.3.4
 CATEGORIES=	geography
 MASTER_SITES=	http://download.osgeo.org/geos/
 EXTRACT_SUFX=	.tar.bz2
