@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.15 2012/03/09 14:46:12 fhajny Exp $
+$NetBSD: distinfo,v 1.16 2012/03/12 09:46:06 fhajny Exp $
 
-SHA1 (geos-3.3.2.tar.bz2) = 942b0bbc61a059bd5269fddd4c0b44a508670cb3
-RMD160 (geos-3.3.2.tar.bz2) = 168e12e29c3d7a9408753f19397440f20d321715
-Size (geos-3.3.2.tar.bz2) = 1852080 bytes
+SHA1 (geos-3.3.4.tar.bz2) = 2ec4be729c851460daf89d0d2ab785be5ef4c5c5
+RMD160 (geos-3.3.4.tar.bz2) = e7d34c5ccc5c1d82a1ebaec36ef20c346c321608
+Size (geos-3.3.4.tar.bz2) = 1861750 bytes
 SHA1 (patch-ae) = d568c8950a24b516c6fd58e401bbf19405a2d150
 SHA1 (patch-include-geos-platform.h.in) = 92bd5fc2421650ce4853dce85d8d2e6509aa64e9
