@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.1692 2012/06/01 12:02:59 taca Exp $
+$NetBSD: CHANGES-2012,v 1.1696 2012/06/01 14:29:42 taca Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -2610,3 +2610,7 @@ Changes to the packages collection and infrastructure in 2012:
 	Added misc/libreoffice version 3.5.4.2 [wiz 2012-06-01]
 	Updated converters/ruby-unf_ext to 0.0.5 [taca 2012-06-01]
 	Updated textproc/wdiff to 1.1.2 [gdt 2012-06-01]
+	Updated databases/ruby-sequel to 3.35.0 [taca 2012-06-01]
+	Updated devel/ZenTest to 4.8.0 [taca 2012-06-01]
+	Updated devel/hoe to 3.0.6 [taca 2012-06-01]
+	Updated geography/geos to 3.3.4 [gdt 2012-06-01]
